这次不用输密码了

--- a/readme.html
+++ b/readme.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="refresh" content="0;URL=http://doc.thinkphp.cn/manual/sae_intro.html" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>SAE版ThinkPHP使用说明</title>
+<title>SAE版ThinkPHP使用说明1</title>
 
 </head>
 
